# deep_research_workflow

./: main.py  pyproject.toml  requirements.txt  users.db
deep_research/backend_server/api/: main.py
deep_research/backend_server/api/routes/: report_routes.py
deep_research/backend_server/api/services/: report_service.py
deep_research/backend_server/logger/: __init__.py
deep_research/backend_server/notebooks/: test.ipynb
deep_research/backend_server/utils/: model_loader.py
deep_research/backend_server/workflows/: interview_workflow.py  report_generator_workflow.py
deep_research/generated_report/Impact_of_LLMs_over_the_Future_of_Jobs__20251107_193731/: Impact_of_LLMs_over_the_Future_of_Jobs__20251107_193731.docx
